# PeerChat

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  resources.qrc
include/app/: network_mgr.h
include/client/: Client.h
include/common/: UdpConnector.h  peer_message.h
include/message/: BasicMessage.h
include/network/: common_net.h  network_peer.h  tcp_peer.h  udp_peer.h
include/protocol/: Protocol.h
include/utils/: logger.h
qmls/: main.qml
qmls/components/: Avatar.qml  AvatarBar.qml  ChatList.qml  ChatListItem.qml  FileTrans.qml  InputArea.qml  MessageBubble.qml  MessageList.qml
resources/: resources.qrc
resources/qml/: main.qml
src/: CMakeLists.txt  test.cc
src/app/: CMakeLists.txt  app.cc  network_mgr.cc  peer_chat.cc
src/client/: CMakeLists.txt  client.cc
src/common/: CMakeLists.txt  peer_message.cc
src/message/: BasicMessage.cc
src/network/: CMakeLists.txt  common_net.cc  tcp_peer.cc  udp_peer.cc
src/protocol/: Protocol.cc
src/server/: Server.cc
src/utils/: CMakeLists.txt  logger.cc
